--- a/angular.json
+++ b/angular.json
@@ -25,15 +25,8 @@
                             "src/assets"
                         ],
                         "styles": [
-                            "./node_modules/bootstrap/dist/css/bootstrap.min.css",
-                            "src/styles.css"
-                        ],
-                        "assets": [
-                            "src/favicon.ico",
-                            "src/assets"
-                        ],
-                        "styles": [
-                            "src/styles.css"
+                            "src/styles.css",
+                            "./node_modules/bootstrap/dist/css/bootstrap.css"
                         ],
                         "scripts": [
                             "./node_modules/bootstrap/dist/js/bootstrap.min.js"
