--- a/angular.json
+++ b/angular.json
@@ -18,8 +18,14 @@
                         "main": "src/main.ts",
                         "polyfills": ["zone.js"],
                         "tsConfig": "tsconfig.app.json",
-                        "assets": ["src/favicon.ico", "src/assets"],
-                        "styles": ["src/styles.css"],
+                        "assets": [
+                            "src/favicon.ico",
+                            "src/assets"
+                        ],
+                        "styles": [
+                            "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+                            "src/styles.css"
+                        ],
                         "scripts": [
                             "./node_modules/bootstrap/dist/js/bootstrap.min.js"
                         ]
