--- a/angular.json
+++ b/angular.json
@@ -25,8 +25,9 @@
                             "src/assets"
                         ],
                         "styles": [
-                            "src/styles.css",
-                            "./node_modules/bootstrap/dist/css/bootstrap.css"
+                          "@angular/material/prebuilt-themes/indigo-pink.css",
+                          "src/styles.css",
+                          "./node_modules/bootstrap/dist/css/bootstrap.css"
                         ],
                         "scripts": [
                             "./node_modules/bootstrap/dist/js/bootstrap.min.js"
@@ -90,7 +91,8 @@
                             "src/assets"
                         ],
                         "styles": [
-                            "src/styles.css"
+                          "@angular/material/prebuilt-themes/indigo-pink.css",
+                          "src/styles.css"
                         ],
                         "scripts": []
                     }
