--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.0-alpha3",
     "json-server": "^0.17.3",
     "rxjs": "~7.8.0",
