--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^16.0.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0-alpha3",
+    "flowbite": "^1.6.5",
     "json-server": "^0.17.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
