--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve -o",
+    "server" : "json-server --watch db.json",
+    "start": "ng serve -o ",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
