--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^16.0.0",
     "bootstrap": "^5.3.0-alpha3",
     "json-server": "^0.17.3",
+    "ng-zorro-antd": "^16.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
