--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@cloudinary/angular": "^1.0.0-beta.14",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0-alpha3",
+    "cloudinary-angular": "^1.0.1",
     "flowbite": "^1.6.5",
     "json-server": "^0.17.3",
     "ng-zorro-antd": "^16.0.0",
